hospital.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-api   
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  hospital-api
  template:
    metadata:
      labels:
        app:  hospital-api
    spec:
      containers:
      - name: hospital-api
        image: dockerhouse.azurecr.io/hospital:257-feb2c82477e8071850c60a3e3d8ce82e4ddd3ae9
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "100m"
        ports:
        - containerPort: 80                
---
kind: Service
apiVersion: v1
metadata:
  name: hospital-api-service   
  namespace: default
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80      
  selector:
    app:  hospital-api
